--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSResources.ko.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed.VS/xlf/VSResources.ko.xlf
@@ -480,6 +480,16 @@
         <target state="translated">경고: '{0}'에서의 잠재적 빌드 성능 문제입니다. 빌드가 성공한 후에는 프로젝트가 최신 상태로 표시되지 않습니다. {1}. https://aka.ms/incremental-build-failure를 참조하세요.</target>
         <note>{0} is the file name of the project. {1} is a description of the failure. The period '.' after {1} is intentional and should be kept.</note>
       </trans-unit>
+      <trans-unit id="OtherUpToDateCheckProviderInfo_1">
+        <source>- {0}</source>
+        <target state="new">- {0}</target>
+        <note>{0} is the .NET type name of the implementation of an up-to-date check.</note>
+      </trans-unit>
+      <trans-unit id="OtherUpToDateCheckProvidersPresent">
+        <source>Note that other checks may still determine the project is not up-to-date. The following checks are present:</source>
+        <target state="new">Note that other checks may still determine the project is not up-to-date. The following checks are present:</target>
+        <note />
+      </trans-unit>
       <trans-unit id="ProjectHotReloadSessionManager_AttachingToProcess">
         <source>Attaching to process.</source>
         <target state="translated">프로세스에 연결하는 중입니다.</target>
